convert png to webp

--- a/katalog.html
+++ b/katalog.html
@@ -38,7 +38,7 @@
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
     <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
-        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset="">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div>
 
@@ -47,7 +47,7 @@
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
@@ -157,7 +157,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-1.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-1.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -177,7 +177,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-2.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-2.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -197,7 +197,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-3.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-3.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -217,7 +217,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-4.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-4.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -237,7 +237,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-5.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-5.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -257,7 +257,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-3.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-3.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -277,7 +277,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-7.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-7.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -297,7 +297,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-8.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-8.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -317,7 +317,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-9.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-9.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -337,7 +337,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-10.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-10.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -357,7 +357,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-11.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-11.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -377,7 +377,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-12.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-12.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -405,7 +405,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit object-cover" alt="">
+                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
