--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
     <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
-        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset="">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div>
 
@@ -62,7 +62,7 @@
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
@@ -111,7 +111,7 @@
             <div class="relative bg-emerald-600 rounded-xl w-full h-fit">
                 <!-- Background Image -->
                 <div
-                    class="w-full h-full absolute z-0 rounded-xl bg-center bg-cover opacity-15 bg-no-repeat bg-[url('./assets/images/hero.png')]">
+                    class="w-full h-full absolute z-0 rounded-xl bg-center bg-cover opacity-15 bg-no-repeat bg-[url('./assets/images/hero.webp')]">
                 </div>
                 <!-- Container Mobile & Tablet -->
                 <div class="px-10 py-10 relative xl:hidden">
@@ -181,7 +181,7 @@
                     <div
                         class="z-10 carousel carousel-center max-w-md h-[640px] py-10 space-x-6 bg-transparent rounded-box touch-pan-x">
                         <div id="slide1" class="carousel-item relative">
-                            <img src="./assets/images/carousel-1.png" class="rounded-box" />
+                            <img src="./assets/images/carousel-1.webp" class="rounded-box" />
                             <div class="absolute flex flex-col justify-start items-start p-4 bottom-0 gap-y-2">
                                 <div class="bg-white rounded-md flex flex-row py-1 px-2 gap-x-1">
                                     <img class="w-4 h-4" src="./assets/icons/star.svg" alt="" srcset="">
@@ -200,7 +200,7 @@
                             </div>
                         </div>
                         <div id="slide2" class="carousel-item relative">
-                            <img src="./assets/images/carousel-2.png" class="rounded-box" />
+                            <img src="./assets/images/carousel-2.webp" class="rounded-box" />
                             <div class="absolute flex flex-col justify-start items-start p-4 bottom-0 gap-y-2">
                                 <div class="bg-white rounded-md flex flex-row py-1 px-2 gap-x-1">
                                     <img class="w-4 h-4" src="./assets/icons/star.svg" alt="" srcset="">
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                         <div id="slide3" class="carousel-item relative">
-                            <img src="./assets/images/carousel-3.png" class="rounded-box" />
+                            <img src="./assets/images/carousel-3.webp" class="rounded-box" />
                             <div class="absolute flex flex-col justify-start items-start p-4 bottom-0 gap-y-2">
                                 <div class="bg-white rounded-md flex flex-row py-1 px-2 gap-x-1">
                                     <img class="w-4 h-4" src="./assets/icons/star.svg" alt="" srcset="">
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <div id="slide4" class="carousel-item relative">
-                            <img src="./assets/images/carousel-4.png" class="rounded-box" />
+                            <img src="./assets/images/carousel-4.webp" class="rounded-box" />
                             <div class="absolute flex flex-col justify-start items-start p-4 bottom-0 gap-y-2">
                                 <div class="bg-white rounded-md flex flex-row py-1 px-2 gap-x-1">
                                     <img class="w-4 h-4" src="./assets/icons/star.svg" alt="" srcset="">
@@ -319,7 +319,7 @@
         <div id="visi-misi" class="flex py-20 w-full justify-center">
             <div class="relative bg-emerald-600 rounded-xl w-full h-fit">
                 <div
-                    class="w-full h-full absolute z-0 rounded-xl bg-center bg-cover opacity-15 bg-no-repeat bg-[url('./assets/images/visi-misi.png')]">
+                    class="w-full h-full absolute z-0 rounded-xl bg-center bg-cover opacity-15 bg-no-repeat bg-[url('./assets/images/visi-misi.webp')]">
                 </div>
 
                 <div class="flex grid grid-cols-1 md:grid-cols-2 px-9 py-12 gap-8">
@@ -327,7 +327,7 @@
                         <!-- Garis kuning di belakang text -->
                         <img class="absolute top-[175px] w-[260px] left-11 sm:top-[140px] sm:left-[265px] md:left-8 md:top-[175px] lg:top-[140px] lg:left-[175px] z-0"
                             src="./assets/icons/line-visi-misi.svg" alt="" srcset="">
-                        <img src="./assets/logo/logo-white.png" class="h-12 w-12" alt="" srcset="">
+                        <img src="./assets/logo/logo-white.webp" class="h-12 w-12" alt="" srcset="">
                         <div class="flex flex-col items-center md:items-start gap-y-3">
                             <h2 class="text-3xl font-bold text-white text-center md:text-left z-10">Inspiring
                                 Transformation</h2>
@@ -502,7 +502,7 @@
                         mendukung pertumbuhan ekonomi Indonesia melalui perdagangan dan pembinaan.</p>
                 </div>
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8 items-start justify-start">
-                    <div class="bg-[url('./assets/images/about-us.png')] bg-center bg-cover h-[304px] rounded-xl"></div>
+                    <div class="bg-[url('./assets/images/about-us.webp')] bg-center bg-cover h-[304px] rounded-xl"></div>
                     <div
                         class="flex grid grid-cols-2 md:grid-cols-4 lg:grid-cols-2 gap-8 items-start justify-start h-max">
                         <div class="flex flex-col gap-y-6">
@@ -555,34 +555,34 @@
                         lagi tentang kami, mari berkolaborasi untuk kemajuan negeri</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 grid-flow-row auto-rows-max gap-4">
-                    <a data-fslightbox href="./assets/images/gallery-1.png">
+                    <a data-fslightbox href="./assets/images/gallery-1.webp">
                         <div
-                            class="bg-[url('./assets/images/gallery-1.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
+                            class="bg-[url('./assets/images/gallery-1.webp')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
-                    <a data-fslightbox href="./assets/images/gallery-2.png">
+                    <a data-fslightbox href="./assets/images/gallery-2.webp">
                         <div
-                            class="bg-[url('./assets/images/gallery-2.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
+                            class="bg-[url('./assets/images/gallery-2.webp')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
-                    <a data-fslightbox href="./assets/images/gallery-3.png">
+                    <a data-fslightbox href="./assets/images/gallery-3.webp">
                         <div
-                            class="bg-[url('./assets/images/gallery-3.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
+                            class="bg-[url('./assets/images/gallery-3.webp')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
-                    <a data-fslightbox href="./assets/images/gallery-4.png">
+                    <a data-fslightbox href="./assets/images/gallery-4.webp">
                         <div
-                            class="bg-[url('./assets/images/gallery-4.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
+                            class="bg-[url('./assets/images/gallery-4.webp')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
-                    <a data-fslightbox href="./assets/images/gallery-5.png">
+                    <a data-fslightbox href="./assets/images/gallery-5.webp">
                         <div
-                            class="bg-[url('./assets/images/gallery-5.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
+                            class="bg-[url('./assets/images/gallery-5.webp')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
-                    <a data-fslightbox href="./assets/images/gallery-6.png">
+                    <a data-fslightbox href="./assets/images/gallery-6.webp">
                         <div
-                            class="bg-[url('./assets/images/gallery-6.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
+                            class="bg-[url('./assets/images/gallery-6.webp')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                 </div>
@@ -616,16 +616,16 @@
                 <ul
                     class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-marquee">
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-1.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-1.webp" alt="" srcset="">
                     </li>
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-2.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-2.webp" alt="" srcset="">
                     </li>
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-3.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-3.webp" alt="" srcset="">
                     </li>
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-4.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-4.webp" alt="" srcset="">
                     </li>
                 </ul>
 
@@ -633,16 +633,16 @@
                 <ul class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-marquee"
                     aria-hidden="true">
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-1.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-1.webp" alt="" srcset="">
                     </li>
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-2.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-2.webp" alt="" srcset="">
                     </li>
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-3.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-3.webp" alt="" srcset="">
                     </li>
                     <li>
-                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-4.png" alt="" srcset="">
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-4.webp" alt="" srcset="">
                     </li>
                 </ul>
             </div>
@@ -652,10 +652,10 @@
         <div id="get-started" class="flex py-20 w-full justify-center">
             <div class="relative bg-emerald-600 rounded-xl w-full h-fit">
                 <div
-                    class="w-full h-full absolute z-0 rounded-xl bg-center bg-cover opacity-15 bg-no-repeat bg-[url('./assets/images/get-started.png')]">
+                    class="w-full h-full absolute z-0 rounded-xl bg-center bg-cover opacity-15 bg-no-repeat bg-[url('./assets/images/get-started.webp')]">
                 </div>
                 <div class="flex flex-col gap-y-6 md:gap-y-8 px-4 md:px-16 py-12 z-10 w-full">
-                    <img src="./assets/logo/logo-white.png" class="h-12 w-12" alt="" srcset="">
+                    <img src="./assets/logo/logo-white.webp" class="h-12 w-12" alt="" srcset="">
                     <div class="flex flex-col gap-y-2 z-10">
                         <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-white">Let’s Start Working Together
                         </h2>
@@ -682,7 +682,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit object-cover" alt="">
+                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
