--- a/katalog-tekstil.html
+++ b/katalog-tekstil.html
@@ -38,14 +38,14 @@
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
     <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
-        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset="">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div><!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
     <div id="content" class="max-w-sm p-4 sm:max-w-2xl lg:max-w-5xl xl:max-w-7xl mx-auto">
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
@@ -152,7 +152,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-1.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-1.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -172,7 +172,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-2.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-2.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -192,7 +192,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-3.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-3.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -212,7 +212,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-4.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-4.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -232,7 +232,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-5.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-5.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -252,7 +252,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-3.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-3.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -272,7 +272,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-7.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-7.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -292,7 +292,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-8.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-8.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -312,7 +312,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-9.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-9.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -332,7 +332,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-10.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-10.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -352,7 +352,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-11.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-11.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -372,7 +372,7 @@
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
                                     <img class="rounded-xl aspect-square max-w-max"
-                                        src="./assets/images/produk/produk-12.png" alt="" srcset="">
+                                        src="./assets/images/produk/produk-12.webp" alt="" srcset="">
                                     <div class="flex flex-col gap-y-1">
                                         <p
                                             class="line-clamp-2 text-ellipsis overflow-hidden text-xs lg:text-sm font-normal">
@@ -400,7 +400,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit object-cover" alt="">
+                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
