melengkapi alt di <image> buat naikin skor accesbility

--- a/gallery.html
+++ b/gallery.html
@@ -38,14 +38,14 @@
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
     <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
-        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset="">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div><!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
     <div id="content" class="max-w-sm p-4 sm:max-w-2xl lg:max-w-5xl xl:max-w-7xl mx-auto">
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
@@ -100,52 +100,52 @@
                 <div class="grid gap-4">
                     <a data-fslightbox href="./assets/images/gallery-6.webp"><img
                             class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-6.webp" alt=""></a>
+                            src="./assets/images/gallery-6.webp" alt="gallery"></a>
                     <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg"><img
                             class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt=""></a>
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="gallery"></a>
                     <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg"><img
                             class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg" alt=""></a>
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg" alt="gallery"></a>
                 </div>
                 <div class="grid gap-4">
                     <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg" alt="">
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg" alt="gallery">
                     </a>
                     <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg" alt="">
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg" alt="gallery">
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-1.webp">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-1.webp" alt="">
+                            src="./assets/images/gallery-1.webp" alt="gallery">
                     </a>
                 </div>
                 <div class="grid gap-4">
                     <a data-fslightbox href="./assets/images/gallery-2.webp">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-2.webp" alt="">
+                            src="./assets/images/gallery-2.webp" alt="gallery">
                     </a> <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg" alt="">
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg" alt="gallery">
                     </a> <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg" alt="">
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg" alt="gallery">
                     </a>
                 </div>
                 <div class="grid gap-4">
                     <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="">
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="gallery">
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-3.webp">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="./assets/images/gallery-3.webp" alt="">
+                            src="./assets/images/gallery-3.webp" alt="gallery">
                     </a>
                     <a data-fslightbox href="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg">
                         <img class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
-                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg" alt="">
+                            src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg" alt="gallery">
                     </a>
                 </div>
             </div>
@@ -157,7 +157,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="">
+                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="logo-perusahaan">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
