--- a/kontak.html
+++ b/kontak.html
@@ -39,7 +39,7 @@
     <!-- Preloader -->
     <div id="preloader" role="status"
         class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
-        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset="">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div>
     
@@ -48,7 +48,7 @@
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan" srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
@@ -114,7 +114,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="">
+                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="logo-perusahaan">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
