--- a/tentang.html
+++ b/tentang.html
@@ -38,14 +38,14 @@
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
     <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
-        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset="">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div><!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
     <div id="content" class="max-w-sm p-4 sm:max-w-2xl lg:max-w-5xl xl:max-w-7xl mx-auto">
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="" srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
@@ -131,8 +131,8 @@
                         <div class="flex flex-col items-center md:items-start gap-y-6 pb-6">
                             <!-- Garis kuning di belakang text -->
                             <img class="absolute top-[175px] w-[260px] left-11 sm:top-[140px] sm:left-[265px] md:left-8 md:top-[175px] lg:top-[140px] lg:left-[175px] z-0"
-                                src="./assets/icons/line-visi-misi.svg" alt="" srcset="">
-                            <img src="./assets/logo/logo-white.webp" class="h-12 w-12" alt="" srcset="">
+                                src="./assets/icons/line-visi-misi.svg" alt="yellow line" srcset="">
+                            <img src="./assets/logo/logo-white.webp" class="h-12 w-12" alt="logo-perusahaan putih" srcset="">
                             <div class="flex flex-col items-center md:items-start gap-y-3">
                                 <h2 class="text-3xl font-bold text-white text-center md:text-left z-10">Inspiring
                                     Transformation</h2>
@@ -204,7 +204,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="">
+                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="logo-perusahaan">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
