--- a/katalog.html
+++ b/katalog.html
@@ -37,13 +37,14 @@
 
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
-    <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
+    <div id="preloader" role="status"
+        class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
         <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div>
 
     <!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
-    <div id="content" class="max-w-sm p-4 sm:max-w-2xl lg:max-w-5xl xl:max-w-7xl mx-auto">
+    <div id="content" class="max-w-sm p-4 sm:max-w-2xl lg:max-w-5xl xl:max-w-7xl mx-auto flex-col">
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
@@ -91,7 +92,7 @@
         </div>
 
         <!-- Main Section -->
-        <div class="flex flex-col py-10 md:py-20 w-full justify-center">
+        <div class="flex flex-col py-10 md:py-20 w-full justify-center flex-1">
             <!-- Header -->
             <div class="flex flex-col gap-y-3 items-center">
                 <h2 class="text-2xl sm:text-3xl xl:text-4xl font-bold">Discover Our Product</h2>
@@ -152,7 +153,7 @@
 
                     <!-- Katalog -->
                     <div class="flex flex-col gap-3 md:col-span-3 lg:col-span-6">
-                        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                        <!-- <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                             <a href="detail.html">
                                 <div
                                     class="flex flex-col p-3 w-full bg-white rounded-lg xl:rounded-xl gap-y-3 hover:shadow-lg transition ease-in-out duration-[500]">
@@ -394,8 +395,14 @@
                                     </div>
                                 </div>
                             </a>
+                        </div> -->
+                        <!-- Katalog items state 0 item -->
+                        <div class="flex justify-center w-full">
+                            <p class="text-xs sm:text-base xl:text-lg font-normal text-center">Data tidak ditemukan</p>
                         </div>
                     </div>
+
+
                 </div>
             </div>
         </div>
@@ -439,7 +446,7 @@
                 setTimeout(function () {
                     // Sembunyikan preloader dan tampilkan konten halaman
                     preloader.style.display = 'none';
-                    content.style.display = 'block';
+                    content.style.display = 'flex';
                 }, 1000);
             });
         </script>
