Add state dta 404, fix footer agar stay at end

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,8 @@
 
 <body class="bg-gray-50 text-gray-900 h-screen">
     <!-- Preloader -->
-    <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
+    <div id="preloader" role="status"
+        class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
         <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan" srcset="">
         <span class="sr-only">Memuat Halaman</span>
     </div><!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
@@ -45,10 +46,11 @@
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp" alt="logo-perusahaan srcset=""></a>
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.webp"
+                    alt="logo-perusahaan srcset=""></a>
 
             <!-- Navigation -->
-            <div class="flex items-center">
+            <div class=" flex items-center">
                 <!-- Desktop -->
                 <div class="hidden lg:flex">
                     <div class="flex flex-row justify-evenly gap-x-6 items-center font-medium text-base">
@@ -85,19 +87,19 @@
                         </ul>
                     </details>
                 </div>
-            </div>
+        </div>
+    </div>
+
+    <!-- Main Section -->
+    <div class="flex flex-col py-10 md:py-20 w-full justify-center gap-y-8 flex-1">
+        <div class="flex flex-col gap-y-4 mb-8">
+            <h2 class="text-2xl sm:text-3xl xl:text-4xl font-bold text-center">Captured Moment</h2>
+            <p class="text-xs sm:text-base xl:text-lg font-normal text-center">Ikuti kami, tau lebih dalam lagi
+                tentang kami, mari berkolaborasi untuk kemajuan negeri.</p>
         </div>
 
-        <!-- Main Section -->
-        <div class="flex flex-col py-10 md:py-20 w-full justify-center gap-y-8 flex-1">
-            <div class="flex flex-col gap-y-4 mb-8">
-                <h2 class="text-2xl sm:text-3xl xl:text-4xl font-bold text-center">Captured Moment</h2>
-                <p class="text-xs sm:text-base xl:text-lg font-normal text-center">Ikuti kami, tau lebih dalam lagi
-                    tentang kami, mari berkolaborasi untuk kemajuan negeri.</p>
-            </div>
-
-            <!-- List Gallery/Gallery items-->
-            <!-- <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+        <!-- List Gallery/Gallery items-->
+        <!-- <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                 <div class="grid gap-4">
                     <a data-fslightbox href="./assets/images/gallery-6.webp"><img
                             class="h-full max-w-full rounded-lg hover:scale-[1.015] hover:opacity-80 transition ease-in-out duration-[500] object-cover hover:shadow-lg"
@@ -151,55 +153,55 @@
                 </div>
             </div> -->
 
-            <!-- Gallery items state 0 item -->
-            <div class="flex justify-center">
-                <p class="text-xs sm:text-base xl:text-lg font-normal text-center">Data tidak ditemukan</p>
-            </div>
-
+        <!-- Gallery items state 0 item -->
+        <div class="flex justify-center">
+            <p class="text-xs sm:text-base xl:text-lg font-normal text-center">Data tidak ditemukan</p>
         </div>
 
-        <!-- Footer -->
-        <div class="flex flex-col py-10 w-full">
-            <div class="flex flex-col gap-y-1 md:gap-y-8">
-                <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
-                    <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="logo-perusahaan">
-                        <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
-                        <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
-                            Kekayaan Produk
-                            Indonesia ke Seluruh Dunia. "Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan."</p>
-                    </div>
-                    <div class="flex flex-col gap-y-4">
-                        <a class="text-xs md:text-base font-bold underline text-gray-700">email_perusahaan@email.com</a>
-                        <p class="text-xs md:text-base font-normal text-gray-700">(021)-1234567, 088123456789</p>
-                        <p class="text-xs md:text-base font-normal text-gray-700">Jl. Alamat Kantor Ini Berada, No.
-                            Gedungnya, Kabupaten, Provinsi, Indonesia, Kode Pos</p>
-                    </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="flex flex-col py-10 w-full">
+        <div class="flex flex-col gap-y-1 md:gap-y-8">
+            <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
+                <div class="flex flex-col gap-y-4">
+                    <img src="./assets/logo/logo-lg.webp" class="h-9 md:h-14 w-fit object-cover" alt="logo-perusahaan">
+                    <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
+                    <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
+                        Kekayaan Produk
+                        Indonesia ke Seluruh Dunia. "Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan."</p>
                 </div>
-                <div class="divider"></div>
-                <div class="w-full grid grid-cols-1 lg:grid-cols-2 gap-2 flex justify-between">
-                    <span class="text-xs text-center lg:text-left">© 2023 - All rights reserved</span>
-                    <span class="text-xs text-center lg:text-right">Created by Digi Dreamers</span>
+                <div class="flex flex-col gap-y-4">
+                    <a class="text-xs md:text-base font-bold underline text-gray-700">email_perusahaan@email.com</a>
+                    <p class="text-xs md:text-base font-normal text-gray-700">(021)-1234567, 088123456789</p>
+                    <p class="text-xs md:text-base font-normal text-gray-700">Jl. Alamat Kantor Ini Berada, No.
+                        Gedungnya, Kabupaten, Provinsi, Indonesia, Kode Pos</p>
                 </div>
             </div>
+            <div class="divider"></div>
+            <div class="w-full grid grid-cols-1 lg:grid-cols-2 gap-2 flex justify-between">
+                <span class="text-xs text-center lg:text-left">© 2023 - All rights reserved</span>
+                <span class="text-xs text-center lg:text-right">Created by Digi Dreamers</span>
+            </div>
         </div>
+    </div>
 
-        <script src="./assets/js/fslightbox.js"></script>
-        <script>
-            window.addEventListener('load', function () {
-                var preloader = document.getElementById('preloader');
-                var content = document.getElementById('content');
-                content.style.display = 'none';
+    <script src="./assets/js/fslightbox.js"></script>
+    <script>
+        window.addEventListener('load', function () {
+            var preloader = document.getElementById('preloader');
+            var content = document.getElementById('content');
+            content.style.display = 'none';
 
+            // Sembunyikan preloader dan tampilkan konten halaman
+            // Menambahkan delay 1000 milidetik (1 detik) sebelum menyembunyikan preloader
+            setTimeout(function () {
                 // Sembunyikan preloader dan tampilkan konten halaman
-                // Menambahkan delay 1000 milidetik (1 detik) sebelum menyembunyikan preloader
-                setTimeout(function () {
-                    // Sembunyikan preloader dan tampilkan konten halaman
-                    preloader.style.display = 'none';
-                    content.style.display = 'flex';
-                }, 1000);
-            });
-        </script>
+                preloader.style.display = 'none';
+                content.style.display = 'flex';
+            }, 1000);
+        });
+    </script>
 </body>
 
 </html>
