Add berita&detail_berita, add to navbar, fix h-scr

--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
     <title>Katalog Produk - PT. Tegus Seksama Prima</title>
 </head>
 
-<body class="bg-gray-50 text-gray-900 h-screen">
+<body class="bg-gray-50 text-gray-900 h-full">
     <!-- Preloader -->
     <div id="preloader" role="status"
         class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
